tree-sitter-emerald/test/corpus/closures.txt
==================
closures.em — lambda literals, .call, block arguments and yield
==================

x: Int64 = 10
add_x: Proc = do |y: Int64|
  y + x
end
puts add_x.call(5)

add_one: Proc = do |y: Int64|
  y + 1
end
puts add_one.call(41)

fn repeat(n: Int64, &blk): Void do
  i: Int64 = 0
  while i < n do
    yield i
    i: Int64 = i + 1
  end
end

repeat(3) { |i: Int64| puts i }

---

(source_file
  (let_statement
    name: (identifier)
    type: (identifier)
    value: (integer))
  (let_statement
    name: (identifier)
    value: (lambda_expression
      (parameter_list
        (parameter
          name: (identifier)
          type: (identifier)))
      body: (expression_statement
        (binary_expression
          left: (identifier)
          right: (identifier)))))
  (puts_statement
    argument: (method_call_expression
      receiver: (identifier)
      method: (identifier)
      (argument_list
        (integer))))
  (let_statement
    name: (identifier)
    value: (lambda_expression
      (parameter_list
        (parameter
          name: (identifier)
          type: (identifier)))
      body: (expression_statement
        (binary_expression
          left: (identifier)
          right: (integer)))))
  (puts_statement
    argument: (method_call_expression
      receiver: (identifier)
      method: (identifier)
      (argument_list
        (integer))))
  (function_definition
    name: (identifier)
    (param_clause
      (parameter
        name: (identifier)
        type: (identifier))
      block_param: (identifier))
    return_type: (identifier)
    body: (let_statement
      name: (identifier)
      type: (identifier)
      value: (integer))
    body: (while_statement
      condition: (binary_expression
        left: (identifier)
        right: (identifier))
      body: (yield_statement
        arguments: (identifier))
      body: (let_statement
        name: (identifier)
        type: (identifier)
        value: (binary_expression
          left: (identifier)
          right: (integer)))))
  (expression_statement
    (call_expression
      function: (identifier)
      (argument_list
        (integer))
      block: (block
        (parameter_list
          (parameter
            name: (identifier)
            type: (identifier)))
        (puts_statement
          argument: (identifier))))))
