tree-sitter-emerald/test/corpus/control_flow.txt
==================
control_flow.em — if/elsif/else/unless/until/for-in/match, break/next
==================

fn classify(n: Int64): Int64 do
  if n == 0 do
    return 0
  end
  if n < 10 do
    return 1
  end
  return 2
end

a: Int64 = 5
b: Int64 = 10

if a < b do
  puts 1
else
  puts 0
end

if b > a do
  puts 1
end

if a <= 5 do
  puts 1
end

if b >= 10 do
  puts 1
end

if a != b do
  puts 1
end

if a == 5 do
  puts 1
end

i: Int64 = 0
while i < 5 do
  if i == 2 do
    i: Int64 = i + 1
    next
  end
  if i == 4 do
    break
  end
  puts i
  i: Int64 = i + 1
end

puts classify(0)
puts classify(5)
puts classify(20)

c: Int64 = 7
if c == 1 do
  puts 100
elsif c == 7 do
  puts 101
else
  puts 102
end

unless c == 1 do
  puts 103
end

u: Int64 = 0
until u == 2 do
  puts u
  u: Int64 = u + 1
end

for x in [5, 6, 7]
  puts x
end

match c do
  7 do
    puts 200
  end
  8 do
    puts 201
  end
end

---

(source_file
  (function_definition
    name: (identifier)
    (param_clause
      (parameter
        name: (identifier)
        type: (identifier)))
    return_type: (identifier)
    body: (if_statement
      condition: (binary_expression
        left: (identifier)
        right: (integer))
      consequence: (return_statement
        value: (integer)))
    body: (if_statement
      condition: (binary_expression
        left: (identifier)
        right: (integer))
      consequence: (return_statement
        value: (integer)))
    body: (return_statement
      value: (integer)))
  (let_statement
    name: (identifier)
    type: (identifier)
    value: (integer))
  (let_statement
    name: (identifier)
    type: (identifier)
    value: (integer))
  (if_statement
    condition: (binary_expression
      left: (identifier)
      right: (identifier))
    consequence: (puts_statement
      argument: (integer))
    (else_clause
      body: (puts_statement
        argument: (integer))))
  (if_statement
    condition: (binary_expression
      left: (identifier)
      right: (identifier))
    consequence: (puts_statement
      argument: (integer)))
  (if_statement
    condition: (binary_expression
      left: (identifier)
      right: (integer))
    consequence: (puts_statement
      argument: (integer)))
  (if_statement
    condition: (binary_expression
      left: (identifier)
      right: (integer))
    consequence: (puts_statement
      argument: (integer)))
  (if_statement
    condition: (binary_expression
      left: (identifier)
      right: (identifier))
    consequence: (puts_statement
      argument: (integer)))
  (if_statement
    condition: (binary_expression
      left: (identifier)
      right: (integer))
    consequence: (puts_statement
      argument: (integer)))
  (let_statement
    name: (identifier)
    type: (identifier)
    value: (integer))
  (while_statement
    condition: (binary_expression
      left: (identifier)
      right: (integer))
    body: (if_statement
      condition: (binary_expression
        left: (identifier)
        right: (integer))
      consequence: (let_statement
        name: (identifier)
        type: (identifier)
        value: (binary_expression
          left: (identifier)
          right: (integer)))
      consequence: (next_statement))
    body: (if_statement
      condition: (binary_expression
        left: (identifier)
        right: (integer))
      consequence: (break_statement))
    body: (puts_statement
      argument: (identifier))
    body: (let_statement
      name: (identifier)
      type: (identifier)
      value: (binary_expression
        left: (identifier)
        right: (integer))))
  (puts_statement
    argument: (call_expression
      function: (identifier)
      (argument_list
        (integer))))
  (puts_statement
    argument: (call_expression
      function: (identifier)
      (argument_list
        (integer))))
  (puts_statement
    argument: (call_expression
      function: (identifier)
      (argument_list
        (integer))))
  (let_statement
    name: (identifier)
    type: (identifier)
    value: (integer))
  (if_statement
    condition: (binary_expression
      left: (identifier)
      right: (integer))
    consequence: (puts_statement
      argument: (integer))
    (elsif_clause
      condition: (binary_expression
        left: (identifier)
        right: (integer))
      consequence: (puts_statement
        argument: (integer))
      (else_clause
        body: (puts_statement
          argument: (integer)))))
  (unless_statement
    condition: (binary_expression
      left: (identifier)
      right: (integer))
    consequence: (puts_statement
      argument: (integer)))
  (let_statement
    name: (identifier)
    type: (identifier)
    value: (integer))
  (until_statement
    condition: (binary_expression
      left: (identifier)
      right: (integer))
    body: (puts_statement
      argument: (identifier))
    body: (let_statement
      name: (identifier)
      type: (identifier)
      value: (binary_expression
        left: (identifier)
        right: (integer))))
  (for_statement
    variable: (identifier)
    elements: (argument_list
      (integer)
      (integer)
      (integer))
    body: (puts_statement
      argument: (identifier)))
  (match_statement
    scrutinee: (identifier)
    (match_values_arm
      values: (integer)
      body: (puts_statement
        argument: (integer)))
    (match_values_arm
      values: (integer)
      body: (puts_statement
        argument: (integer)))))
