tree-sitter-emerald/test/corpus/exceptions.txt
==================
exceptions.em — raise, begin/rescue/ensure/retry
==================

class MyError
  code: Int64

  def initialize(code: Int64) -> Void
    @code = code
  end

  def code -> Int64
    @code
  end
end

def risky(x: Int64) -> Int64
  if x > 100
    raise MyError.new(99)
  end
  return x
end

begin
  puts risky(999)
rescue MyError => e
  puts e.code
end

begin
  puts risky(5)
rescue MyError => e
  puts 0
end

attempts: Int64 = 0
begin
  attempts: Int64 = attempts + 1
  if attempts < 2
    raise MyError.new(1)
  end
  puts attempts
rescue MyError => e
  if attempts < 2
    retry
  end
  puts 999
ensure
  puts 777
end

---

(source_file
  (class_definition
    name: (identifier)
    (field_declaration
      name: (identifier)
      type: (identifier))
    (method_definition
      name: (identifier)
      (param_clause
        (parameter
          name: (identifier)
          type: (identifier)))
      return_type: (identifier)
      body: (assignment_statement
        target: (instance_variable)
        value: (identifier)))
    (method_definition
      name: (identifier)
      return_type: (identifier)
      body: (expression_statement
        (instance_variable))))
  (function_definition
    name: (identifier)
    (param_clause
      (parameter
        name: (identifier)
        type: (identifier)))
    return_type: (identifier)
    body: (if_statement
      condition: (binary_expression
        left: (identifier)
        right: (integer))
      consequence: (raise_statement
        value: (new_expression
          class: (identifier)
          (argument_list
            (integer)))))
    body: (return_statement
      value: (identifier)))
  (begin_statement
    body: (puts_statement
      argument: (call_expression
        function: (identifier)
        (argument_list
          (integer))))
    (rescue_clause
      class: (identifier)
      variable: (identifier)
      body: (puts_statement
        argument: (method_call_expression
          receiver: (identifier)
          method: (identifier)))))
  (begin_statement
    body: (puts_statement
      argument: (call_expression
        function: (identifier)
        (argument_list
          (integer))))
    (rescue_clause
      class: (identifier)
      variable: (identifier)
      body: (puts_statement
        argument: (integer))))
  (let_statement
    name: (identifier)
    type: (identifier)
    value: (integer))
  (begin_statement
    body: (let_statement
      name: (identifier)
      type: (identifier)
      value: (binary_expression
        left: (identifier)
        right: (integer)))
    body: (if_statement
      condition: (binary_expression
        left: (identifier)
        right: (integer))
      consequence: (raise_statement
        value: (new_expression
          class: (identifier)
          (argument_list
            (integer)))))
    body: (puts_statement
      argument: (identifier))
    (rescue_clause
      class: (identifier)
      variable: (identifier)
      body: (if_statement
        condition: (binary_expression
          left: (identifier)
          right: (integer))
        consequence: (retry_statement))
      body: (puts_statement
        argument: (integer)))
    (ensure_clause
      body: (puts_statement
        argument: (integer)))))
